added collection module in catalog and changed the category, added category services
